[package]
name = "tetris-ai"
version = "0.1.0"
authors = ["Bryan Chen <bryanchen74@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
ai-api = { path = "packages/ai-api" }
rusty-ai = { path = "packages/rusty-ai" }