[package]
name = "tetris-ai"
version = "0.1.0"
authors = ["Bryan Chen <bryanchen74@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.5"
actix-cors = "0.5"
common = { path = "packages/common" }
rusty-ai = { path = "packages/rusty-ai" }

[profile.release]
lto = true