[package]
name = "common"
version = "0.1.0"
authors = ["Bryan Chen <bryanchen74@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
base64 = "0.13.0"
once_cell = "1.13.1"
redis = "0.22.1"
sdl2 = { version = "0.35.2", features = ["bundled"] }

[dev-dependencies]
termion = "1.5"
criterion = { version = "0.3", features = ["html_reports"] }

[profile.release]
debug = true

[[bench]]
name = "my_bench"
harness = false
