[package]
name = "common"
version = "0.1.0"
authors = ["Bryan Chen <bryanchen74@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
base64 = "0.21.1"
once_cell = "1.13.1"
crossbeam = "0.8.2"
arraydeque = "0.5.1"

[dev-dependencies]
termion = "2.0.1"

[profile.release]
debug = true
