[package]
name = "common"
version = "0.1.0"
authors = ["Bryan Chen <bryanchen74@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
base64 = "0.22"
crossbeam = "0.8.2"

[dev-dependencies]
termion = "3.0.0"

[profile.release]
debug = true
