[package]
name = "libtetris"
version = "0.1.0"
authors = ["Bryan Chen <bryanchen74@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
rand_core = "0.9"
rand_xorshift = "0.4"
base64 = "0.22"
fnv = "1.0"

[dev-dependencies]
termion = "4.0.2"
