[package]
name = "pc-finder"
version = "0.1.0"
authors = ["Bryan Chen <bryanchen74@gmail.com>"]
edition = "2021"

[dependencies]
redis = { version = "*" }
fnv = "1.0"
common = { path = "../common" }
ctrlc = { version = "3.2", optional = true }
rand = "0.8.5"
rayon = "1.5"
base64 = "0.21.7"
tinyvec = { version = "1.6", features = ["alloc"] }
once_cell = "1.13.1"
anyhow = "1.0"

[[bin]]
name = "prune"
required-features = ["ctrlc"]

[[bin]]
name = "gen"
required-features = ["ctrlc"]

[profile.release]
debug = true

[dev-dependencies]
sdl-gui = { path = "../sdl-gui" }
# lto = true
