[package]
name = "pc-finder"
version = "0.1.0"
authors = ["Bryan Chen <bryanchen74@gmail.com>"]
edition = "2024"

[dependencies]
libtetris = { path = "../libtetris" }
tinyvec = { version = "1.6", features = ["alloc"] }
anyhow = "1.0"

[profile.release]
debug = true

[features]
generate = []
default = ["generate"]
