[package]
name = "tree-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
libtetris = { path = "../libtetris" }
anyhow = "1.0"
rayon = "1.5"
smallvec = { version = "1.10.0", features = ["const_generics"] }
rand = "0.9"
rand_core = "0.9"
rand_xorshift = "0.4"
rand_distr = "0.5"

[profile.release]
debug = true

[dev-dependencies]
sdl-gui = { path = "../sdl-gui" }
