[package]
name = "web-wasm"
version = "0.1.0"
authors = ["Bryan Chen <bryanchen74@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
libtetris = { version = "0.1.0", path = "../libtetris" }
getrandom = { version = "0.2", features = ["js"] }
once_cell = "1.19"
serde_json = "1.0"

[profile.release]
opt-level = "s"
