[package]
name = "web-wasm"
version = "0.1.0"
authors = ["Bryan Chen <bryanchen74@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
serde_json = "1.0"
libtetris = { version = "0.1.0", path = "../libtetris" }
tree-bot = { version = "0.1.0", path = "../tree-bot" }
pc-finder = { version = "0.1.0", path = "../pc-finder", default-features = false }
