[package]
name = "rusty-ai"
version = "0.1.0"
authors = ["Bryan Chen <bryanchen74@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.3"
rand_distr = "0.4.0"
base64 = "0.13.0"
byteorder = "1.4.3"
ctrlc = "3.1.8"
chrono = "0.4.19"
ai-api = {path="../ai-api"}